--- a/docs/_releases/v4.0.36.md
+++ b/docs/_releases/v4.0.36.md
@@ -67,7 +67,7 @@ Plugins.Add(new SitemapFeature
 });
 ```
 
-The above example uses [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to generate a collection of `SitemapUrl` entries containing Absolute Urls for all [techstacks.io Technology Pages](http://techstacks.io/tech). This is another good showcase for the [Reverse Routing available on Request DTO's](/routing#reverse-routing) which provides a Typed API for generating Urls without any additional effort.
+The above example uses [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to generate a collection of `SitemapUrl` entries containing Absolute Urls for all [techstacks.io Technology Pages](https://techstacks.io/tech). This is another good showcase for the [Reverse Routing available on Request DTO's](/routing#reverse-routing) which provides a Typed API for generating Urls without any additional effort.
 
 Once populated your sitemap will be available at `/sitemap.xml` which looks like:
 
@@ -75,7 +75,7 @@ Once populated your sitemap will be available at `/sitemap.xml` which looks like
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 <url>
-  <loc>http://techstacks.io/the-guardian</loc>
+  <loc>https://techstacks.io/the-guardian</loc>
   <lastmod>2015-01-14</lastmod>
   <changefreq>weekly</changefreq>
 </url>
@@ -83,7 +83,7 @@ Once populated your sitemap will be available at `/sitemap.xml` which looks like
 </urlset>
 ```
 
-Which you can checkout in this [live Sitemap example](http://techstacks.io/sitemap-techstacks.xml).
+Which you can checkout in this [live Sitemap example](https://techstacks.io/sitemap-techstacks.xml).
 
 ### Multiple Sitemap Indexes
 
@@ -131,21 +131,21 @@ Plugins.Add(new SitemapFeature
 });
 ```
 
-Which now generates the following `<sitemapindex/>` at [/sitemap.xml](http://techstacks.io/sitemap.xml):
+Which now generates the following `<sitemapindex/>` at [/sitemap.xml](https://techstacks.io/sitemap.xml):
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 <sitemap>
-  <loc>http://techstacks.io/sitemap-techstacks.xml</loc>
+  <loc>https://techstacks.io/sitemap-techstacks.xml</loc>
   <lastmod>2015-01-15</lastmod>
 </sitemap>
 <sitemap>
-  <loc>http://techstacks.io/sitemap-technologies.xml</loc>
+  <loc>https://techstacks.io/sitemap-technologies.xml</loc>
   <lastmod>2015-01-15</lastmod>
 </sitemap>
 <sitemap>
-  <loc>http://techstacks.io/sitemap-users.xml</loc>
+  <loc>https://techstacks.io/sitemap-users.xml</loc>
   <lastmod>2015-01-15</lastmod>
 </sitemap>
 </sitemapindex>
@@ -153,9 +153,9 @@ Which now generates the following `<sitemapindex/>` at [/sitemap.xml](http://tec
 
 With each entry linking to the urlset for each Sitemap:
 
- - [techstacks.io/sitemap-techstacks.xml](http://techstacks.io/sitemap-techstacks.xml)
- - [techstacks.io/sitemap-technologies.xml](http://techstacks.io/sitemap-technologies.xml)
- - [techstacks.io/sitemap-users.xml](http://techstacks.io/sitemap-users.xml)
+ - [techstacks.io/sitemap-techstacks.xml](https://techstacks.io/sitemap-techstacks.xml)
+ - [techstacks.io/sitemap-technologies.xml](https://techstacks.io/sitemap-technologies.xml)
+ - [techstacks.io/sitemap-users.xml](https://techstacks.io/sitemap-users.xml)
 
 ## Razor
 
@@ -173,27 +173,27 @@ public object Any(Request request)
 
 `HttpResult.View` was previously limited to names of Razor Views in the `/Views` folder.
 
-## [Techstacks](http://techstacks.io)
+## [Techstacks](https://techstacks.io)
 
-Whilst not specifically Framework features, we've added some features to [techstacks.io](http://techstacks.io) that may be interesting for ServiceStack Single Page App developers:
+Whilst not specifically Framework features, we've added some features to [techstacks.io](https://techstacks.io) that may be interesting for ServiceStack Single Page App developers:
 
 ### Server Generated HTML Pages
 
-Whilst we believe Single Page Apps offer the more responsive UI, we've also added a server html version of [techstacks.io](http://techstacks.io) which we serve to WebCrawlers like **Googlebot** so they're better able to properly index content in the AngularJS SPA website. It also provides a good insight into the UX difference between a Single Page App vs Server HTML generated websites. Since [techstacks.io](http://techstacks.io) is running on modest hardware (i.e. IIS on shared **m1.small** EC2 instance with a shared **micro** RDS PostgreSQL backend) the differences are more visible with the AngularJS version still being able to yield a snappy App-like experience whilst the full-page reloads of the Server HTML version is clearly visible on each request.
+Whilst we believe Single Page Apps offer the more responsive UI, we've also added a server html version of [techstacks.io](https://techstacks.io) which we serve to WebCrawlers like **Googlebot** so they're better able to properly index content in the AngularJS SPA website. It also provides a good insight into the UX difference between a Single Page App vs Server HTML generated websites. Since [techstacks.io](https://techstacks.io) is running on modest hardware (i.e. IIS on shared **m1.small** EC2 instance with a shared **micro** RDS PostgreSQL backend) the differences are more visible with the AngularJS version still being able to yield a snappy App-like experience whilst the full-page reloads of the Server HTML version is clearly visible on each request.
 
 The code to enable this is in [ClientRoutesService.cs](https://github.com/ServiceStackApps/TechStacks/blob/master/src/TechStacks/TechStacks.ServiceInterface/ClientRoutesService.cs) which illustrates a simple technique used to show different versions of your website which by default is enabled implicitly for `Googlebot` User Agents, or can be toggled explicitly between by visiting the routes below:
 
-  - [techstacks.io?html=client](http://techstacks.io?html=client)
-  - [techstacks.io?html=server](http://techstacks.io?html=server)
+  - [techstacks.io?html=client](https://techstacks.io?html=client)
+  - [techstacks.io?html=server](https://techstacks.io?html=server)
 
 These links determine whether you'll be shown the AngularJS version or the Server HTML Generated version of the Website. We can see how this works by exploring how the technology pages are implemented which handle both the technology index:
 
-  - http://techstacks.io/tech
+  - https://techstacks.io/tech
 
 as well as individual technology pages, e.g:
 
-  - http://techstacks.io/tech/redis
-  - http://techstacks.io/tech/servicestack
+  - https://techstacks.io/tech/redis
+  - https://techstacks.io/tech/servicestack
 
 First we need to create empty Request DTO's to capture the client routes (as they were only previously configured in AngularJS routes):
 
@@ -269,16 +269,16 @@ The `base.ExecuteRequest(new GetAllTechnologies())` API lets you execute a Servi
 
 AngularJS declarative HTML pages holds an advantage when maintaining multiple versions of a websites as porting AngularJS views to Razor is relatively 
 straight-forward process, basically consisting of converting Angular `ng-attributes` to `@Razor` statements, as can be seen in the client vs server 
-versions of [techstacks.io/tech](http://techstacks.io/tech) index page:
+versions of [techstacks.io/tech](https://techstacks.io/tech) index page:
 
   - [/partials/tech/latest.html](https://github.com/ServiceStackApps/TechStacks/blob/master/src/TechStacks/TechStacks/partials/tech/latest.html)
   - [/Views/Tech/AllTech.cshtml](https://github.com/ServiceStackApps/TechStacks/blob/master/src/TechStacks/TechStacks/Views/Tech/AllTech.cshtml)
 
 ### Twitter Updates
 
-Another way to increase user engagement of your website is by posting Twitter Updates, [techstacks.io](http://techstacks.io) does this whenever anyone adds a new Technology or Technology Stack by posting a status update to [@webstacks](https://twitter.com/webstacks). The [code to make authorized Twitter API requests](https://github.com/ServiceStackApps/TechStacks/blob/master/src/TechStacks/TechStacks.ServiceInterface/TwitterUpdates.cs) ends up being fairly lightweight as it can take advantage of ServiceStack's built-in support for Twitter OAuth.
+Another way to increase user engagement of your website is by posting Twitter Updates, [techstacks.io](https://techstacks.io) does this whenever anyone adds a new Technology or Technology Stack by posting a status update to [@webstacks](https://twitter.com/webstacks). The [code to make authorized Twitter API requests](https://github.com/ServiceStackApps/TechStacks/blob/master/src/TechStacks/TechStacks.ServiceInterface/TwitterUpdates.cs) ends up being fairly lightweight as it can take advantage of ServiceStack's built-in support for Twitter OAuth.
 
-> We'd also love for others to Sign In and add their Company's Technology Stack on [techstacks.io](http://techstacks.io) so everyone can get a better idea what technologies everyone's using.
+> We'd also love for others to Sign In and add their Company's Technology Stack on [techstacks.io](https://techstacks.io) so everyone can get a better idea what technologies everyone's using.
 
 ## ServiceStack.Text
 
