--- a/docs/_releases/v4.0.38.md
+++ b/docs/_releases/v4.0.38.md
@@ -100,7 +100,7 @@ If you've ever had to make HTTP requests using Objective-C's `NSURLConnection` o
 To illustrate its usage we'll go through some client code to consume [TechStacks](https://github.com/ServiceStackApps/TechStacks) Services after adding a **ServiceStack Reference** to `http://techstaks.io`:
 
 ```swift
-var client = JsonServiceClient(baseUrl: "http://techstacks.io")
+var client = JsonServiceClient(baseUrl: "https://techstacks.io")
 var response = client.get(AppOverview())
 ```
 
@@ -206,7 +206,7 @@ JsonServiceClient.Global.responseFilter = {(res:NSURLResponse) in ... }
 
 ## Introducing TechStacks iPhone and iPad App!
 
-To illustrate the ease-of-use and utility of ServiceStack's new Swift support we've developed a native iOS App for http://techstacks.io that has been recently published and is now available to download for free on the AppStore:
+To illustrate the ease-of-use and utility of ServiceStack's new Swift support we've developed a native iOS App for https://techstacks.io that has been recently published and is now available to download for free on the AppStore:
 
 [![TechStacks on AppStore](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/release-notes/techstacks-appstore.png)](https://itunes.apple.com/us/app/techstacks/id965680615?ls=1&mt=8)
 
@@ -228,7 +228,7 @@ Firstly to enable KVO in your Swift DTO's we'll want to have each DTO inherit fr
 /* Options:
 Date: 2015-02-19 22:43:04
 Version: 1
-BaseUrl: http://techstacks.io
+BaseUrl: https://techstacks.io
 
 BaseClass: NSObject
 ...
@@ -553,7 +553,7 @@ The header comments in the generated DTO's allows for further customization of h
 /* Options:
 Date: 2015-02-22 13:52:26
 Version: 1
-BaseUrl: http://techstacks.io
+BaseUrl: https://techstacks.io
 
 //BaseClass: 
 //AddModelExtensions: True
@@ -710,7 +710,7 @@ As it's a nice client feature, we've also added this option to C# and VB.NET nat
 ```csharp
 /* Options:
 Version: 1
-BaseUrl: http://techstacks.io
+BaseUrl: https://techstacks.io
 
 GlobalNamespace: ServiceModels
 ...
