--- a/docs/_releases/v4.0.42.md
+++ b/docs/_releases/v4.0.42.md
@@ -12,8 +12,8 @@ which instead of `HttpWebRequest` is based on Microsoft's latest async `HttpClie
 where in most cases it can simply be renamed to `JsonHttpClient`, e.g:
 
 ```csharp
-//IServiceClient client = new JsonServiceClient("http://techstacks.io");
-IServiceClient client = new JsonHttpClient("http://techstacks.io");
+//IServiceClient client = new JsonServiceClient("https://techstacks.io");
+IServiceClient client = new JsonHttpClient("https://techstacks.io");
 ```
 
 Which can then be [used as normal](/csharp-client):
@@ -376,7 +376,7 @@ To Get Started download **ssutil.exe** and open a command prompt to the containi
 
 To create a new ServiceStack Reference, pass the remote ServiceStack **BaseUrl** then specify both which `-file` and `-lang` you want, e.g:
 
-    ssutil http://techstacks.io -file TechStacks -lang CSharp
+    ssutil https://techstacks.io -file TechStacks -lang CSharp
 
 Executing the above command fetches the C# DTOs and saves them in a local file named `TechStacks.dtos.cs`.
 
