--- a/docs/_releases/v4.0.48.md
+++ b/docs/_releases/v4.0.48.md
@@ -28,7 +28,7 @@ all the while ensuring ServiceStack's libraries runs cross-platform on Mono/Linu
 ## AWS's servicified platform and polyglot ecosystem
 
 By building their managed platform behind platform-agnostic web services, Amazon have largely eroded this barrier. We
-can finally tap into the same ecosystem [innovative Startups are using](http://techstacks.io/tech/amazon-ec2) with
+can finally tap into the same ecosystem [innovative Startups are using](https://techstacks.io/tech/amazon-ec2) with
 nothing more than the complexity cost of a service call - the required effort even further reduced with native clients. 
 Designing its services behind message-based APIs made it much easier for Amazon to enable a new polyglot world with 
 [native clients for most popular platforms](https://aws.amazon.com/dynamodb/developer-resources/#SDK), putting .NET
