--- a/docs/_releases/v4.0.60.md
+++ b/docs/_releases/v4.0.60.md
@@ -839,7 +839,7 @@ Likewise this API lets you convert Sessions created by any of the OAuth provider
 ### Switching existing Sites to JWT
 
 Thanks to the flexibility and benefits of using stateless JWT Tokens, we've upgraded both our Single Page App
-http://techstacks.io which uses Twitter and GitHub OAuth to [use JWT with a single Ajax call](https://github.com/ServiceStackApps/TechStacks/blob/78ecd5e390e585c14f616bb27b24e0072b756040/src/TechStacks/TechStacks/js/user/services.js#L30):
+https://techstacks.io which uses Twitter and GitHub OAuth to [use JWT with a single Ajax call](https://github.com/ServiceStackApps/TechStacks/blob/78ecd5e390e585c14f616bb27b24e0072b756040/src/TechStacks/TechStacks/js/user/services.js#L30):
 
 ```javascript
 $.post("/session-to-token");
@@ -857,7 +857,7 @@ option as a hidden variable in our FORM request:
 ```
 
 Which just like `ConvertSessionToToken` returns a populated session in the **ss-tok** Cookie so now 
-both [techstacks.io](http://techstacks.io) and [servicestack.net](https://servicestack.net) can maintain 
+both [techstacks.io](https://techstacks.io) and [servicestack.net](https://servicestack.net) can maintain 
 uninterrupted Sessions across multiple redeployments without a persistent Sessions cache.
 
 ### JWT Configuration
