--- a/docs/_releases/v4.5.6.md
+++ b/docs/_releases/v4.5.6.md
@@ -226,13 +226,13 @@ To Add a new ServiceStack Reference, call `swiftref` with the Base URL to a remo
 
 Where if no FileName is provided, it's inferred from the host name of the remote URL, e.g:
 
-    swiftref http://techstacks.io
+    swiftref https://techstacks.io
 
-Downloads the Typed Swift DTOs for [techstacks.io](http://techstacks.io) and saves them to `techstacks.dtos.swift`. 
+Downloads the Typed Swift DTOs for [techstacks.io](https://techstacks.io) and saves them to `techstacks.dtos.swift`. 
 
 Alternatively you can have it saved to a different FileName with:
 
-    swiftref http://techstacks.io TechStacks
+    swiftref https://techstacks.io TechStacks
 
 Which instead saves the DTOs to `TechStacks.dtos.swift`.
 
@@ -310,7 +310,7 @@ Then create a Folder under `/Sources` to store the App source code:
 
 Now download the Typed DTOs from the remote ServiceStack Service you want to access, e.g:
 
-    curl http://techstacks.io/types/swift?DefaultImports=Foundation,ServiceStackClient > TechStacks.dtos.swift
+    curl https://techstacks.io/types/swift?DefaultImports=Foundation,ServiceStackClient > TechStacks.dtos.swift
 
 The above url includes a modified **import** in the generated DTOs by appending the
 `?DefaultImports=Foundation,ServiceStackClient` query string to the Swift Types endpoint so it references the 
@@ -322,7 +322,7 @@ is writing the App that consumes them, which is added in `main.swift`:
 ```swift
 import ServiceStackClient;
 
-let client = JsonServiceClient(baseUrl:"http://techstacks.io")
+let client = JsonServiceClient(baseUrl:"https://techstacks.io")
 
 let request = GetTechnology()
 request.slug = "ServiceStack"
@@ -342,7 +342,7 @@ from the `.build` directory:
 
     .build/debug/App
 
-Where executing the App downloads [Technology Stacks using ServiceStack](http://techstacks.io/tech/servicestack),
+Where executing the App downloads [Technology Stacks using ServiceStack](https://techstacks.io/tech/servicestack),
 serializes the 1st Result to JSON, then prints the JSON output to the Console.
 
 ## [Service Fabric Example](https://github.com/ServiceStackApps/HelloServiceFabric)
