--- a/docs/_releases/v4.5.8.md
+++ b/docs/_releases/v4.5.8.md
@@ -840,7 +840,7 @@ client.get(request, { VendorName: "ServiceStack" })
     .then(r => { }) // typed to QueryResponse<TechnologyStack> 
 ```
 
-Which will [return TechStacks](http://techstacks.io/ss_admin/autoquery/FindTechStacks) developed by ServiceStack.
+Which will [return TechStacks](https://techstacks.io/ss_admin/autoquery/FindTechStacks) developed by ServiceStack.
 
 ### Calling APIs with Custom URLs
 
@@ -849,9 +849,9 @@ In addition to Typed API Requests you can now also call Services using relative 
 ```ts
 client.get<GetTechnologyResponse>("/technology/ServiceStack")
 
-client.get<GetTechnologyResponse>("http://techstacks.io/technology/ServiceStack")
+client.get<GetTechnologyResponse>("https://techstacks.io/technology/ServiceStack")
 
-// GET http://techstacks.io/technology?Slug=ServiceStack
+// GET https://techstacks.io/technology?Slug=ServiceStack
 client.get<GetTechnologyResponse>("/technology", { Slug: "ServiceStack" }) 
 ```
 
@@ -860,8 +860,8 @@ client.get<GetTechnologyResponse>("/technology", { Slug: "ServiceStack" })
 [TypeScript Add ServiceStack Reference](/typescript-add-servicestack-reference) can
 generate either TypeScript Concrete Types or Ambient Interface Definitions for your Services at the following routes:
 
-- [/types/typescript](http://techstacks.io/types/typescript) - Server Concrete DTO Types
-- [/types/typescript.d](http://techstacks.io/types/typescript.d) - Server Ambient Interface Definitions
+- [/types/typescript](https://techstacks.io/types/typescript) - Server Concrete DTO Types
+- [/types/typescript.d](https://techstacks.io/types/typescript.d) - Server Ambient Interface Definitions
 
 These were previously both generated to enable an optimal end-to-end Typed API for use in the TypeScript 
 **@servicestack/client** which needs to embed metadata in Request DTOs to retain necessary type information that 
