--- a/docs/_releases/v4.0.52.md
+++ b/docs/_releases/v4.0.52.md
@@ -79,7 +79,7 @@ you can click on the **ServiceStack Reference...** Menu Item to open the **Add S
 The **Add ServiceStack Reference** Dialog will be partially populated with the selected **Package** with the 
 package where the Dialog was launched from and the **File Name** defaulting to `dtos.kt` where the generated 
 Kotlin DTO's will be added to. All that's missing is the url of the remote ServiceStack instance you wish to 
-generate the DTO's for, e.g: `http://techstacks.io`:
+generate the DTO's for, e.g: `https://techstacks.io`:
 
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/wikis/kotlin/kotlin-add-servicestack-reference.png)
 
@@ -102,7 +102,7 @@ Like other Native Type languages, the generated DTO's can be further customized 
 /* Options:
 Date: 2015-04-17 15:16:08
 Version: 1
-BaseUrl: http://techstacks.io
+BaseUrl: https://techstacks.io
 
 Package: org.layoric.myapplication
 GlobalNamespace: techstackdtos
@@ -129,7 +129,7 @@ Both Java and Kotlin use the same `JsonServiceClient` that you need to initializ
 the remote ServiceStack instance you want to access, e.g:
 
 ```kotlin
-val client = JsonServiceClient("http://techstacks.io")
+val client = JsonServiceClient("https://techstacks.io")
 ```
 
 > The JsonServiceClient is made available after the [net.servicestack:android](https://bintray.com/servicestack/maven/ServiceStack.Android/view) package is automatically added to your **build.gradle** when adding a ServiceStack reference.
@@ -162,7 +162,7 @@ the response into, e.g:
 val response = client.get("/overview", OverviewResponse::class.java)
 
 //Using an Absolute Url:
-val response = client.get("http://techstacks.io/overview", OverviewResponse::class.java)
+val response = client.get("https://techstacks.io/overview", OverviewResponse::class.java)
 ```
 
 ### AutoQuery Example Usage
@@ -182,7 +182,7 @@ Main UI thread), you'll instead need to use an instance of `AndroidServiceClient
 `JsonServiceClient` can be used to perform both Sync and Async requests which can be instantiated with:
 
 ```kotlin
-val client = AndroidServiceClient("http://techstacks.io")
+val client = AndroidServiceClient("https://techstacks.io")
 ```
 To provide an optimal experience for Kotlin and Java 8, we've added 
 [SAM overloads](https://kotlinlang.org/docs/reference/java-interop.html#sam-conversions) 
@@ -222,7 +222,7 @@ client.getAsync("/overview", OverviewResponse::class.java,
     })
 
 //Absolute Url:
-client.getAsync("http://techstacks.io/overview", OverviewResponse::class.java,
+client.getAsync("https://techstacks.io/overview", OverviewResponse::class.java,
     AsyncSuccess<OverviewResponse>() {
     })
 
