--- a/docs/_releases/v4.0.62.md
+++ b/docs/_releases/v4.0.62.md
@@ -115,14 +115,14 @@ Hitting `Enter` then:
  - initializes a `JsonServiceClient` with your **BaseUrl** 
  - and provides an example of a `Get()` Request using the **first GET Request DTO** it can find
 
-Which for [techstacks.io](http://techstacks.io) results in:
+Which for [techstacks.io](https://techstacks.io) results in:
 
 ```csharp
 using System.Linq;
 using ServiceStack;
 using ServiceStack.Text;
 
-var client = new JsonServiceClient("http://techstacks.io");
+var client = new JsonServiceClient("https://techstacks.io");
 
 //Call techstacks.io APIs by sending typed Request DTO's
 var response = client.Get(new GetAllTechnologies {  });
@@ -147,7 +147,7 @@ You can also pre-populate the C# expression and have it **autorun** with:
  - [?AddServiceStackReference=techstacks.io&Request=Overview&expression=response.TopTechnologies[0]&autorun=1](http://gistlyn.com?AddServiceStackReference=techstacks.io&Request=AppOverview&expression=response.TopTechnologies[0]&autorun=1)
 
 We then end up with a **live** link that anyone with a modern browser on their Desktop or iPad can
-click on to call [techstacks.io](http://techstacks.io)'s public API to find out what its Most popular 
+click on to call [techstacks.io](https://techstacks.io)'s public API to find out what its Most popular 
 technology is, in seconds.
 
 ### Adding ServiceStack References to existing Gists
