Use nameof(NoRockstarAlbumReferences)

--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -2075,7 +2075,7 @@ public class MyValidators : ScriptMethods
 Which we can now declaratively reference by script method name:
 
 ```csharp
-[ValidateRequest("NoRockstarAlbumReferences")]
+[ValidateRequest(nameof(NoRockstarAlbumReferences))]
 public class ExampleValidators : ICreateDb<Rockstar>, IReturn<RockstarWithIdResponse>, IHasId<int>
 {
     public int Id { get; set; }
