--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -2759,9 +2759,10 @@ ASP.NET Core Framework Templates:
    2. razor-corefx       .NET Framework ASP.NET Core Website with ServiceStack.Razor
    3. react-lite-corefx  .NET Framework ASP.NET Core lite (npm-free) React SPA using TypeScript inc bundling + hot reloading
    4. selfhost-corefx    .NET Framework ASP.NET Core self-hosting Console App
-   5. script-corefx       .NET Framework ASP.NET Core #Script Pages Bootstrap Website
+   5. script-corefx      .NET Framework ASP.NET Core #Script Pages Bootstrap Website
    6. vue-lite-corefx    .NET Framework ASP.NET Core lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
    7. web-corefx         .NET Framework ASP.NET Core Website
+   8. empty-corefx       .NET Framework ASP.NET Core Single Project Website
 ```
 
 ## `web +` - customize mix/match projects from gists!
