--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -46,7 +46,7 @@ ServiceStack Studio can be used for rapid prototyping or as a generic UI to mana
 and validation. Studio has acquired a number of capabilities & features already that we've tried to highlight in
 this feature video:
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/GTnuMhvUayg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="896" height="525" src="https://www.youtube.com/embed/kN7371bqUII" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ### Value of APIs
 
