tweak rel notes

--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -12,7 +12,7 @@ capabilities to enable even higher value-added features:
 To capture the unprecedented productivity unlocked by this release we've created a video showing how much
 is possible in a few minutes with ServiceStack, starting from just an existing RDBMS: 
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/NaJ7TW-Q_pU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="video-hd" src="https://www.youtube.com/embed/NaJ7TW-Q_pU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 This video walks through creating a new GitHub project with an [empty web project](https://github.com/NetCoreApps/Chinook#chinook) from scratch, then:
 
@@ -46,7 +46,7 @@ ServiceStack Studio can be used for rapid prototyping or as a generic UI to mana
 and validation. Studio has acquired a number of capabilities & features already that we've tried to highlight in
 this feature video:
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/kN7371bqUII" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="video-hd" src="https://www.youtube.com/embed/kN7371bqUII" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ### Value of APIs
 
@@ -123,7 +123,7 @@ source files directly into existing code bases, preserving any existing files.
 This is also useful for Client Applications that need to start from an existing scaffolded project template like
 incorporating their client Dart App into a new Flutter Mobile App as seen in this video:
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/GTnuMhvUayg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="video-hd" src="https://www.youtube.com/embed/GTnuMhvUayg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ### Share Executable API Examples
 
@@ -475,7 +475,7 @@ The first GitHub Actions Template we'll look at is `release-ghr-vanilla` which u
 GitHub Actions deploys to this stand alone Linux server via SSH and an `nginx-proxy` container along with a 
 LetsEncrypt companion container that takes care of registration & renewal of SSL Certs.
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/0PvzcnxlBvc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="video-hd" src="https://www.youtube.com/embed/0PvzcnxlBvc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 Please also refer to the [documented guide](/do-github-action-mix-deployment) when setting up your own project
 deployments for the first time.
@@ -494,7 +494,7 @@ Containers handling the reverse proxying and managing the LetsEncrypt SSL Certs.
 This is a cost effective way to get multiple Apps deployed using ECS by avoiding ALB costs for non-scale out solutions
 that only need to run on a single instance.
 
-<iframe width="896" height="525" src="https://www.youtube.com/embed/Eh4tvLN8i8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="video-hd" src="https://www.youtube.com/embed/Eh4tvLN8i8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 Please follow the [written tutorial](/mix-github-actions-aws-ecs) for more details on how the templates work 
 and setting up the required AWS configuration.
@@ -1503,7 +1503,7 @@ to try out all 23 languages without needing to pollute your main Desktop with lo
 
     $ docker pull servicestack/gistcafe
 
-<iframe src="https://www.youtube.com/embed/NVeoJBZrCBo" width="896" height="525" frameborder="0" allowfullscreen
+<iframe src="https://www.youtube.com/embed/NVeoJBZrCBo" class="video-hd" frameborder="0" allowfullscreen
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 After running a local Docker instance you can connect to it with 
