replace win `md` with x-plat `mkdir`

--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -2478,8 +2478,7 @@ to create Reactive, high-performance native Android and iOS Apps.
 
 We can test Dart's gRPC integration and development workflow in a new Dart Console App we can create with:
 
-    $ md dart-grpc
-    $ cd dart-grpc
+    $ mkdir dart-grpc && cd dart-grpc
     $ pub global activate stagehand
     $ stagehand console-full
 
@@ -3971,7 +3970,7 @@ without any external file references with the single `<script/>` reference:
 
 This is used by the updated [mix init](/mix-tool#mix-usage) gists when generating its empty Web Apps:
 
-    $ md web && cd web
+    $ mkdir web && cd web
     $ x mix init
     $ dotnet run
 
