--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -450,7 +450,7 @@ Now that we've seen how easy it is to Install and use existing Web Apps, lets wa
 
 For this example we'll create a small App that leverages one of the advanced Web technologies in SVG that would be cumbersome to create using a native GUI toolkit. To start let's create a folder for our app called `spirals` and initialize and empty Web App with `app init`:
 
-    $ md spirals
+    $ mkdir spirals
     $ cd spirals && app init
 
 We could have started from one of the [more complete Web App Templates](https://sharpscript.net/docs/sharp-apps#getting-started) but this gives
