--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -283,7 +283,7 @@ var response = await client.post(SecureRequest(name:"World"));
 Inspect.printDump(response); // print API Response into human-readable format
 ```
 
-### Java & Kotlin Service Clients
+### Java Service Clients
 
 ```java
 JsonServiceClient client = new JsonServiceClient(baseUrl);
@@ -300,6 +300,27 @@ AuthenticateResponse authResponse = client.post(authRequest);
 SecureResponse response = client.post(new SecureRequest().setName("World"));
 
 Inspect.printDump(response); // print API Response into human-readable format
+```
+
+### Kotlin Service Clients
+
+```kotlin
+val client = new JsonServiceClient(baseUrl)
+val authResponse = client.post(Authenticate().apply {
+    provider = "credentials"
+    userName = userName
+    password = password
+})
+
+//client.getTokenCookie();         // JWT Bearer Token
+//client.getRefreshTokenCookie();  // JWT Refresh Token
+
+// When no longer valid, Auto Refreshes JWT Bearer Token using Refresh Token Cookie
+SecureResponse response = client.post(SecureRequest().apply {
+    name = "World"    
+})
+
+Inspect.printDump(response) // print API Response into human-readable format
 ```
 
 ### Swift Service Client
