--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -312,11 +312,11 @@ val authResponse = client.post(Authenticate().apply {
     password = password
 })
 
-//client.getTokenCookie();         // JWT Bearer Token
-//client.getRefreshTokenCookie();  // JWT Refresh Token
+//client.tokenCookie         // JWT Bearer Token
+//client.refreshTokenCookie  // JWT Refresh Token
 
 // When no longer valid, Auto Refreshes JWT Bearer Token using Refresh Token Cookie
-SecureResponse response = client.post(SecureRequest().apply {
+val response = client.post(SecureRequest().apply {
     name = "World"    
 })
 
