--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -7,7 +7,7 @@ A nice aspect of the flagship features in this release is that they build upon S
 capabilities to enable even higher value-added features:
 
  - [Instant Client Apps](#instant-client-apps)
- - [GitHub Action Templates](#github-action-templates)
+ - [GitHub Action Templates](#githubaction-templates)
 
 To capture the unprecedented productivity unlocked by this release we've created a video showing how much
 is possible in a few minutes with ServiceStack, starting from just an existing RDBMS: 
@@ -377,7 +377,7 @@ Or dump a markdown table for quickly visualizing a list of tabular results:
 Inspect.printDumpTable(response.results)
 ```
 
-## GitHub Action Templates
+## GitHubAction Templates
 
 ![](../images/actions/github-actions-header.png)
 
