--- a/docs/_releases/v5.11.md
+++ b/docs/_releases/v5.11.md
@@ -262,7 +262,7 @@ let authResponse = await client.post(authRequest);
 // In Browser can't read "HttpOnly" Token Cookies by design, In Node.js can access client.cookies  
 
 // When no longer valid, Auto Refreshes JWT Bearer Token using Refresh Token Cookie
-let response = await client.post(SecureRequest({ name: "World" }));
+let response = await client.post(new SecureRequest({ name: "World" }));
 
 Inspect.printDump(response); // print API Response into human-readable format
 ```
